# ExaCMech

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ecmech.bib  uncrustify.cfg
.github/: CODEOWNERS
cmake/: CMakeBasics.cmake  ECMechOptions.cmake
cmake/thirdpartylibraries/: FindCUB.cmake  FindRAJA.cmake  FindSNLS.cmake  SetupThirdPartyLibraries.cmake
miniapp/: 1k_quats.txt  CMakeLists.txt  material_kernels.cpp  material_kernels.cxx  material_kernels.h  miniapp_script.bash  miniapp_util.h  option.txt  option_cpu.txt  option_cuda.txt  option_gpu.txt  option_hip.txt  option_openmp.txt  orientation_evolution  orientation_evolution.cpp  orientation_evolution.cxx  props.txt  rand_quats.txt  rand_quats_cpu.txt  rand_quats_cuda.txt  retrieve_kernels.cpp  retrieve_kernels.cxx  retrieve_kernels.h  setup_kernels.cpp  setup_kernels.cxx  setup_kernels.h
pyecmech/: CMakeLists.txt  ecmech_classes.hpp  ecmech_pybind11.cpp  ecmechpy.cpp  ecmechpy.hpp  example-dev.py  example.py
src/ecmech/: CMakeLists.txt  ECMech_Version.h.in  ECMech_cases.cxx  ECMech_cases.h  ECMech_config.h.in  ECMech_const.cxx  ECMech_const.h  ECMech_core.h  ECMech_cuda_portability.h  ECMech_eosSimple.h  ECMech_evptn.cxx  ECMech_evptn.h  ECMech_evptnWrap.cxx  ECMech_evptnWrap.h  ECMech_evptn_cases.h  ECMech_evptn_test.cxx  ECMech_gpu_portability.h  ECMech_kinetics.cxx  ECMech_kinetics.h  ECMech_kinetics_KMBalD.h  ECMech_kinetics_VocePL.h  ECMech_matModelBase.h  ECMech_port.h  ECMech_slipgeom.cpp  ECMech_slipgeom.cxx  ECMech_slipgeom.h  ECMech_util.h  mc_vars_set.h  testCompile_ECMech_evptn.cxx  vad_vars_set.h  vadl_vars_set.h  vb_d_vars_set.h  vw_vars_set.h
src/interface/: ECMech_evptnWrap.cxx  ECMech_evptnWrap.h  ECMech_matModelBase.cxx  ECMech_matModelBase.h
test/: CMakeLists.txt  setup_base.h  setup_conditions.h  setup_elastn.h  setup_elastn_HCP.h  setup_eos.h  setup_kin_KMBalD_FFF.h  setup_kin_KMBalD_TFF_BCC_A.h  setup_kin_KMBalD_TTT_HCP_A.h  setup_kin_VocePL.h  setup_kin_VocePL_NS.h  setup_slipGeom.h  setup_slipGeom_HCP.h  test_aniso_hardening.cxx  test_aniso_kinetics_VocePL.h  test_evptn.cxx  test_evptn_hcp.cxx  test_expectedVals.h  test_hardening.cxx  test_px.cxx  test_updst.cxx
